<resources>
    <string name="app_name">Your notes</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_note_details">NoteDetails</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--  Activities and fragments  -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calling_activity">calling_activity</string>
    <string name="main_activity">main_activity</string>

    <!--  input fields  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm password</string>

    <!--    navigation items  -->
    <string name="item_notes">Notes</string>
    <string name="item_add_new">Add New</string>
    <string name="item_sync_notes">Sync Notes</string>
    <string name="item_logout">Logout</string>
    <string name="item_general">General</string>

    <!--    buttons  -->
    <string name="button_sync_now">sync now</string>
    <string name="button_save">Save</string>
    <string name="button_login">Login</string>

    <!--    links  -->
    <string name="link_login">Already have an account? Login</string>
    <string name="link_signin">No account yet? Create one</string>

    <!--  texts and hints  -->
    <string name="please_wait">Please wait...</string>
    <string name="header_signin">Connect to Geek\'s App</string>
    <string name="write_note">Write your note here!</string>
    <string name="app_subtitle">take your notebook with you</string>
    <string name="note_name">Name here...</string>
</resources>











